<resources>
    <string name="app_name">Lab1</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="SID">学号：</string>
    <string name="SID_hint">请输入学号</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
</resources>
